--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Calculator-TUI"
+name = "tui_calc"
 version = "0.1.0"
 authors = ["Sean Hellum <seanhellum45@gmail.com>"]
 edition = "2018"
